--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
@@ -21,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".MainActivity" >
@@ -29,6 +31,7 @@
                 android:value="com.example.milos.perica.MainActivity" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".Podesavanja"
             android:label="@string/title_activity_podesavanja"
             android:parentActivityName=".MainActivity"
